--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,49 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>タイトル</title>
+  <title>Wallet</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script>
+    $(function () {
+      $.ajax({
+        url: '/wallet',
+        type: 'POST',
+        success: function (response) {
+          $('#public_key').val(response['public_key']);
+          $('#private_key').val(response['private_key']);
+          $('#blockchain_address').val(response['blockchain_address']);
+        },
+        error: function (error) {
+          console.error(error);
+        }
+      })  
+    })
+
+  </script>
 </head>
 <body>
-  Hello
+  <div>
+    <h1>Wallet</h1>
+    <div id="wallet_amount">0</div>
+    <button id="reload_wallet">Reload Wallet</button>
+
+    <p>Public Key</p>
+    <textarea id="public_key" cols="100" rows="2"></textarea>
+    <p>Private Key</p>
+    <textarea id="private_key" cols="100" rows="1"></textarea>
+    <p>Blockchain Address</p>
+    <textarea id="blockchain_address" cols="100" rows="1"></textarea>
+  </div>
+
+  <div>
+    <h1>Send Money</h1>
+    <div>
+      Address: <input id="recipient_blockchain_address" size="100" 
+                      type="text"><br>
+      Amount: <input id="send_amount" type="text"><br>
+      <button id="send_money_button">Send</button>
+    </div>
+  </div>
 </body>
 </html>
