--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wallet</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
          $(function () {
              $.ajax({
@@ -52,7 +52,30 @@
 
              })
 
+             function reload_amount() {
+                 let data = {'blockchain_address': $('#blockchain_address').val()}
+                 $.ajax({
+                     url: '/wallet/amount',
+                     type: 'GET',
+                     data: data,
+                     success: function (response) {
+                         let amount = response['amount'];
+                         $('#wallet_amount').text(amount);
+                         console.log(amount);
+                     },
+                     error: function (error) {
+                         console.error(error);
+                     }
+                 })
+             }
 
+             
+            //  $('#reload_wallet').click(function () {
+            //         reload_amount();
+            //  });
+             
+
+             setInterval(reload_amount, 3000);
 
          })
     </script>
@@ -61,7 +84,9 @@
     <div>
         <h1>Wallet</h1>
         <div id="wallet_amount">0</div>
+        <!--
         <button id="reload_wallet">Reload Wallet</button>
+        -->
 
         <p>Public Key</p>
         <textarea id="public_key" rows="2" cols="100"></textarea>
